# lixun

crates/lixun-daemon/src/: config.rs
crates/lixun-daemon/src/hotkeys/: hyprland_bind.rs  kglobalaccel.rs  mod.rs  portal.rs
crates/lixun-gui/: Cargo.toml  style.css
crates/lixun-gui/src/: kde_blur.rs  lib.rs  style_manager.rs  style_watcher.rs  theme.rs  window.rs
