[package]
name = "lixun-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-ipc = { path = "../lixun-ipc" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
toml_edit = "0.22"
dirs = "5"
glib = "0.22"
gio-unix = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
gtk4-layer-shell = "0.8"
gdk4-wayland = { version = "0.11", features = ["wayland_crate"] }
wayland-client = "0.31"
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
notify.workspace = true
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
base64 = "0.22"
quoted_printable = "0.5"
opener = "0.8"
async-channel = "2"
libc = "0.2"
lixun-daemon = { path = "../lixun-daemon" }
lixun-preview = { path = "../lixun-preview" }

[dev-dependencies]
tempfile = "3"

[lib]
name = "lixun_gui"
path = "src/lib.rs"
